# radiance

./: .gitignore  CLAUDE.md  TODO-DTYPE-MODE.md  pyproject.toml
configs/: fineweb_500m.yaml  fineweb_router.yaml  sweep.yaml  sweep_fineweb_router.yaml  sweep_loop_ffn.yaml  tinystories.yaml  tinystories_router.yaml  tinystories_streaming.yaml
src/radiance/: config.py  data.py  generate.py  model.py  sweep.py  train.py
