[project]
name = "radiance"
version = "0.1.0"
description = "Experimental LLM training framework"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "transformers>=4.40",
    "datasets>=2.19",
    "wandb>=0.17",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "numpy>=1.26",
]

[project.scripts]
radiance-train = "radiance.train:main"
radiance-generate = "radiance.generate:main"
radiance-sweep = "radiance.sweep:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
